@@ -1,43 +1,105 @@
-SELECT ST_SameAlignment(
-	ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, 0, 0),
-	ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, 0, 0)
-);
-SELECT ST_SameAlignment(
-	ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, 0, 0),
-	ST_MakeEmptyRaster(1, 1, 0, 0, 1.1, 1.1, 0, 0)
-);
-SELECT ST_SameAlignment(
-	ST_MakeEmptyRaster(1, 1, 0, 0, 1.1, 1.1, 0, 0),
-	ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, 0, 0)
-);
-SELECT ST_SameAlignment(
-	ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, 0, 0),
-	ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, -0.1, 0)
-);
-SELECT ST_SameAlignment(
-	ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, 0, 0),
-	ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, 0, 0.1)
-);
-SELECT ST_SameAlignment(
-	ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, 0, 0),
-	ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, -0.1, 0.1)
-);
-SELECT ST_SameAlignment(
-	ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, 0, 0),
-	ST_MakeEmptyRaster(1, 1, 1, 1, 1, 1, 0, 0)
-);
-SELECT ST_SameAlignment(
-	ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, 0, 0),
-	ST_MakeEmptyRaster(1, 1, 0.1, 0.1, 1, 1, 0, 0)
-);
-SELECT ST_SameAlignment(
-	ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, -0.1, 0.1),
-	ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, -0.1, 0.1)
-);
-SELECT ST_SameAlignment(
-	ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, -0.1, 0.1),
-	ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, -0.1, 0)
-);
+SET client_min_messages TO warning;
+
+SELECT
+	ST_SameAlignment(
+		ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, 0, 0),
+		ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, 0, 0)
+	),
+	ST_NotSameAlignmentReason(
+		ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, 0, 0),
+		ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, 0, 0)
+	)
+;
+SELECT
+	ST_SameAlignment(
+		ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, 0, 0),
+		ST_MakeEmptyRaster(1, 1, 0, 0, 1.1, 1.1, 0, 0)
+	),
+	ST_NotSameAlignmentReason(
+		ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, 0, 0),
+		ST_MakeEmptyRaster(1, 1, 0, 0, 1.1, 1.1, 0, 0)
+	)
+;
+SELECT
+	ST_SameAlignment(
+		ST_MakeEmptyRaster(1, 1, 0, 0, 1.1, 1.1, 0, 0),
+		ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, 0, 0)
+	),
+	ST_NotSameAlignmentReason(
+		ST_MakeEmptyRaster(1, 1, 0, 0, 1.1, 1.1, 0, 0),
+		ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, 0, 0)
+	)
+;
+SELECT
+	ST_SameAlignment(
+		ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, 0, 0),
+		ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, -0.1, 0)
+	),
+	ST_NotSameAlignmentReason(
+		ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, 0, 0),
+		ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, -0.1, 0)
+	)
+;
+SELECT
+	ST_SameAlignment(
+		ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, 0, 0),
+		ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, 0, 0.1)
+	),
+	ST_NotSameAlignmentReason(
+		ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, 0, 0),
+		ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, 0, 0.1)
+	)
+;
+SELECT
+	ST_SameAlignment(
+		ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, 0, 0),
+		ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, -0.1, 0.1)
+	),
+	ST_NotSameAlignmentReason(
+		ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, 0, 0),
+		ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, -0.1, 0.1)
+	)
+;
+SELECT
+	ST_SameAlignment(
+		ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, 0, 0),
+		ST_MakeEmptyRaster(1, 1, 1, 1, 1, 1, 0, 0)
+	),
+	ST_NotSameAlignmentReason(
+		ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, 0, 0),
+		ST_MakeEmptyRaster(1, 1, 1, 1, 1, 1, 0, 0)
+	)
+;
+SELECT
+	ST_SameAlignment(
+		ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, 0, 0),
+		ST_MakeEmptyRaster(1, 1, 0.1, 0.1, 1, 1, 0, 0)
+	),
+	ST_NotSameAlignmentReason(
+		ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, 0, 0),
+		ST_MakeEmptyRaster(1, 1, 0.1, 0.1, 1, 1, 0, 0)
+	)
+;
+SELECT
+	ST_SameAlignment(
+		ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, -0.1, 0.1),
+		ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, -0.1, 0.1)
+	),
+	ST_NotSameAlignmentReason(
+		ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, -0.1, 0.1),
+		ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, -0.1, 0.1)
+	)
+;
+SELECT
+	ST_SameAlignment(
+		ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, -0.1, 0.1),
+		ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, -0.1, 0)
+	),
+	ST_NotSameAlignmentReason(
+		ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, -0.1, 0.1),
+		ST_MakeEmptyRaster(1, 1, 0, 0, 1, 1, -0.1, 0)
+	)
+;
 
 DROP TABLE IF EXISTS raster_alignment_test;
 CREATE TABLE raster_alignment_test AS
