@@ -1,26 +1,16 @@
-t
-NOTICE:  The two rasters provided have different scales on the X axis
-f
-NOTICE:  The two rasters provided have different scales on the X axis
-f
-NOTICE:  The two rasters provided have different skews on the X axis
-f
-NOTICE:  The two rasters provided have different skews on the Y axis
-f
-NOTICE:  The two rasters provided have different skews on the X axis
-f
-t
-f
-t
-NOTICE:  The two rasters provided have different skews on the Y axis
-f
-NOTICE:  table "raster_alignment_test" does not exist, skipping
+t|The rasters are aligned
+f|The rasters have different scales on the X axis
+f|The rasters have different scales on the X axis
+f|The rasters have different skews on the X axis
+f|The rasters have different skews on the Y axis
+f|The rasters have different skews on the X axis
+t|The rasters are aligned
+f|The rasters (pixel corner coordinates) are not aligned
+t|The rasters are aligned
+f|The rasters have different skews on the Y axis
 t
 f
-NOTICE:  The two rasters provided have different skews on the X axis
 f
-NOTICE:  The two rasters provided have different skews on the X axis
 f
-NOTICE:  The two rasters provided have different skews on the Y axis
 f
 f
