@@ -53,6 +53,7 @@ PostGIS 2.1.0
   - ST_Tile(raster) to break up a raster into tiles (Bborie Park / UC Davis)
   - #739, UpdateRasterSRID()
   - #1895, new r-tree node splitting algorithm (Alex Korotkov)
+  - #1709, ST_NotSameAlignmentReason(raster, raster)
 
 * Enhancements *
   - #823,  tiger geocoder: Make loader_generate_script download portion 
